src/patternfly/components/ChipGroup/chip-group.scss
.pf-c-chip-group {
  @include pf-t-light; // force the container follow the light theme

  // Chip group list
  --pf-c-chip-group__list--MarginBottom: calc(var(--pf-global--spacer--xs) * -1);
  --pf-c-chip-group__list--MarginRight: calc(var(--pf-global--spacer--xs) * -1);

  // Category
  --pf-c-chip-group--m-category--PaddingTop: var(--pf-global--spacer--xs);
  --pf-c-chip-group--m-category--PaddingRight: var(--pf-global--spacer--xs);
  --pf-c-chip-group--m-category--PaddingBottom: var(--pf-global--spacer--xs);
  --pf-c-chip-group--m-category--PaddingLeft: var(--pf-global--spacer--sm);
  --pf-c-chip-group--m-category--BorderRadius: var(--pf-global--BorderRadius--sm);
  --pf-c-chip-group--m-category--BackgroundColor: var(--pf-global--BackgroundColor--200);

  // Label in group
  --pf-c-chip-group__label--MarginRight: var(--pf-global--spacer--sm);
  --pf-c-chip-group__label--FontSize: var(--pf-global--FontSize--sm);
  --pf-c-chip-group__label--MaxWidth: #{pf-size-prem(160px)};

  // Chip group close
  --pf-c-chip-group__close--MarginTop: calc(var(--pf-global--spacer--xs) * -1);
  --pf-c-chip-group__close--MarginBottom: calc(var(--pf-global--spacer--xs) * -1);

  // Chip
  --pf-c-chip-group__list-item--MarginRight: var(--pf-global--spacer--xs);
  --pf-c-chip-group__list-item--MarginBottom: var(--pf-global--spacer--xs);

  &.pf-m-category {
    padding-top: var(--pf-c-chip-group--m-category--PaddingTop);
    padding-right: var(--pf-c-chip-group--m-category--PaddingRight);
    padding-bottom: var(--pf-c-chip-group--m-category--PaddingBottom);
    padding-left: var(--pf-c-chip-group--m-category--PaddingLeft);
    background-color: var(--pf-c-chip-group--m-category--BackgroundColor);
    border-radius: var(--pf-c-chip-group--m-category--BorderRadius);
  }
}

.pf-c-chip-group__list {
  margin-right: var(--pf-c-chip-group__list--MarginRight);
  margin-bottom: var(--pf-c-chip-group__list--MarginBottom);
}

.pf-c-chip-group,
.pf-c-chip-group__list {
  display: inline-flex;
  flex-wrap: wrap;
  align-items: center;
}

.pf-c-chip-group__list-item {
  margin-right: var(--pf-c-chip-group__list-item--MarginRight);
  margin-bottom: var(--pf-c-chip-group__list-item--MarginBottom);
  line-height: 1;
}

.pf-c-chip-group__label {
  @include pf-text-overflow;

  max-width: var(--pf-c-chip-group__label--MaxWidth);
  margin-right: var(--pf-c-chip-group__label--MarginRight);
  font-size: var(--pf-c-chip-group__label--FontSize);
}

.pf-c-chip-group__close {
  margin-top: var(--pf-c-chip-group__close--MarginTop);
  margin-bottom: var(--pf-c-chip-group__close--MarginBottom);
}

